<resources>
    <string name="app_name">AgendaContato</string>
    <string name="lnl_Nome">Nome</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_endereco">Endereço</string>
    <string name="lbl_datasespeciais">Datas Especiais</string>
    <string name="lbl_grupos">Grupos</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_alterar">Alterar</string>
    <string name="lbl_excluir">Excluir</string>


</resources>
